overflow: hidden for prevent elements for spreadnig outside of the page

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -19,6 +19,14 @@
         width: 80%;
         margin-left: 10%; 
     }
+
+     .steps-box { margin-top: 10px;}
+    .steps-box:last-child { margin-top: 70px;}
+    .works-step {margin-bottom: 40px;}
+    .works-step:last-child { margin-bottom: 60px;}
+
+    .app-screen { width: 50%; } 
+    .contact-form { width: 80%; }
 }
 
 
